[package]
name = "drop-root"
version = "1.0.0"
description = "Set a user id and group (using the names) id to drop root privileges"
authors = ["Jesus Hernandez <jesushdez@protonmail.com>"]
license = "Unlicense"
keywords = ["unix", "privileges", "security", "service", "daemon"]
categories = ["development-tools::ffi", "os::unix-apis"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/jhg/drop-root-rs"

exclude = [
    ".github",
    ".gitignore",
]

[dependencies]
libc = "^0.2"
log = "^0.4"
