[package]
name = "drop-root"
version = "1.2.0"
description = "Set a user id and group (using the names) id to drop root privileges"
authors = ["Jesus Hernandez <jesushdez@protonmail.com>"]
license = "Unlicense"
keywords = ["unix", "privileges", "security", "service", "daemon"]
categories = ["development-tools::ffi", "os::unix-apis"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/jhg/drop-root-rs"

exclude = [
    ".github/**",
    ".vscode/**",
    ".idea/**",
    "tests/**",
    "benches/**",
    "Cargo.lock",
    "LICENSE",
    ".gitignore",
]

[dependencies]
libc = "^0.2"
log = { version = "^0.4", optional = true }

[features]
default = ["logging"]
logging = ["log"]
